<resources>
    <string name="app_name">Geniusfeed</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Activity title -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_feed_item">FeedItemActivity</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_activity_fav_feed_item">FavFeedItemActivity</string>

    <!-- Login fragment -->
    <string name="main_title">Geniusfeed</string>
    <string name="login_username">Username</string>
    <string name="login_username_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="repeat_login_password_hint">repeat password</string>
    <string name="login_password">Password</string>
    <string name="error_login_communication">An error happens when login.</string>
    <string name="error_login_bad_credentials">The username or password is not valid.</string>
    <string name="login_button_title">Login</string>
    <string name="signup_button_title">Sign Up</string>

    <!-- Sign Up fragment -->
    <string name="email_error_validation">Invalid email</string>
    <string name="password_error_validation">Invalid password, min 6 char alphanumeric</string>
    <string name="repeat_password_error_validation">Invalid password</string>

    <!-- Menu strings -->
    <string name="open_drawer_menu">Open Menu</string>
    <string name="close_drawer_menu">Close Menu</string>
    <string name="list_feed_menu_item_timeframe">Home feed list</string>
    <string name="list_feed_menu_item">All feeds</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="list_fav_feed_menu_item">Fav feed items</string>
    <string name="recommended_feeds_menu_item">Recommended for you</string>
    <string name="login_string">Login</string>
    <string name="logout_string">Logout</string>

    <string name="html_wrap" translatable="false">
            <![CDATA[
            <html>
                <head>
                    <style type="text/css">
                        body {
                            font-size: 100%%;
                            color: #333;
                            background-color: #fff;
                        }
                        a {
                            color: #ff5722;
                        }
                        a:hover {
                            color: #06c;
                        }
                        img {display: inline; height: auto; max-width: 100%%;}
                        pre {white-space: pre-wrap;}
                    </style>
                </head>
                <body>%1$s</body>
                </html>
            ]]>
    </string>

    <!-- Add Feed Dialog -->
    <string name="add_feed_confirm">Add Feed</string>
    <string name="add_feed_cancel">Cancel</string>
    <string name="error_creating_feed">An error happens creating the feed.</string>
    <string name="error_url_malformed">The URL is malformed.</string>
    <string name="ok">Ok</string>

    <!-- Delete Feed -->
    <string name="error_deleting_feed">An error happens creating the feed.</string>
    <string name="done_deleting_feed">The feed has been delete.</string>

    <!-- Feed Activity -->
    <string name="error_updating_feed_item">An error happens updating this entry.</string>
    <string name="error_updating_all_items">An error happends updating all feed items.</string>

    <!-- Hint strings -->
    <string name="url_feed_source_hint">Feed Url</string>

    <!-- Feed Item view Buttons -->
    <string name="view_on_source">View on Source</string>

    <!-- Add categories dialog fragment -->
    <string name="categories_added_msg">Categories added</string>
    <string name="add_categories_button">Add categories</string>
    <string name="cancel_add_categories">Cancel</string>

    <!-- ProgressDialog messages -->
    <string name="searching_feed_msg">Searching feed data</string>

    <!-- Network status interface alert msg -->
    <string name="network_disconnected">The network has been disconnected. Only fav items can be accessed.</string>

    <!-- Recommended Feeds alert msg -->
    <string name="recommended_feeds_alert_msg">An error happens retrieving recommended feeds from server.</string>

    <!-- Logout -->
    <string name="logout_successfully">You have succesfully logout from Geniusfeed.</string>

</resources>
