<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary" android:clickable="true"
    tools:context="me.abrahanfer.geniusfeed.LoginActivity">


    <!-- Progress bar -->
    <ProgressBar
        android:id="@+id/pbLoading"
        android:theme="@style/CircularProgress"
        android:alpha="1"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


    <TextView
        android:id="@+id/screenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-ligth"
        android:textSize="40sp"
        android:paddingTop="100dp"
        android:text="@string/main_title"
        android:textColor="@color/textviewstatelist"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/screenTitle"
        android:text="@string/login_username"
        android:textSize="24sp"
        android:textColor="@color/textviewstatelist"
        android:gravity="center"
        android:id="@+id/loginLabelUsername"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:minWidth="200dp"
        android:visibility="invisible"
        android:background="@color/color_primary"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/screenTitle"
        android:id="@+id/editTextUsername"
        android:textColor="@color/textviewstatelist"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:minWidth="200dp"
        android:inputType="text"
        android:hint="@string/login_username_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:textColor="@color/textviewstatelist"
        android:textSize="16sp"
        android:id="@+id/loginLabelPassword"
        android:layout_below="@+id/editTextUsername"
        android:layout_marginStart="40dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:minWidth="200dp"
        android:background="@color/color_primary"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPassword"
        android:textColor="@color/textviewstatelist"
        android:layout_below="@+id/loginLabelPassword"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:minWidth="200dp"
        android:inputType="textPassword"
        android:hint="@string/login_password_hint" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_text"
        android:text="Login"
        android:textSize="20dp"
        android:id="@+id/buttonLogin"
        android:layout_below="@+id/editTextPassword"
        android:layout_alignStart="@+id/editTextPassword"
        android:layout_alignEnd="@+id/editTextPassword"
        android:minWidth="200dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="35dp"
        android:onClick="setCredentials"
        style="@style/buttonRaisedPrimaryStyle"
        android:clickable="true"/>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:text="@string/signin_button_title"
        android:textSize="20dp"
        android:layout_alignStart="@+id/editTextPassword"
        android:layout_alignEnd="@+id/editTextPassword"
        android:backgroundTint="@color/color_clear"
        android:textColor="@color/raised_button_color_text_back"
        style="?borderlessButtonStyle"
        android:clickable="true"
        />


</RelativeLayout>
